company axis: one source, and a country fallback for roles with no company
Two threads, both about what a request is narrowed by when the header cannot
answer.

── The company axis now has a single source ──────────────────────────────

PermissionInfo.grantedCompanyIds is resolved from the role's data scope on the
company model (role_data_scope where model = 'LegalEntity') instead of a
RoleCompany table of its own. Two stores bounding the same thing can disagree,
and did: an administrator who narrowed the company scope and left the grant
alone kept seeing every company's departments and reports through a switcher
showing one. One row now bounds both.

ALL resolves to null, never to the materialised list of every id — otherwise
"unrestricted" decays into "these ones" as soon as a company is created after
the snapshot is cached. An explicit id list resolves to exactly those; a
predicate is materialised and picks up new entities only on eviction, which is
the documented cost of answering with ids rather than a filter.

RoleCompany's own rationale argued a scope row is keyed per model, so the list
would be stored eighteen times over. It is not: it lives on the company model's
row. What the table did buy and this gives up is "which roles reach this
company" as a plain query; nothing asks it.

ScopeType.LEGAL_ENTITY is retired. It compiled to legalEntityId = USER_COMP_ID
— the caller's own company — so one role behaved differently for each holder.
Migration V40 must run BEFORE the patched binary: the snapshot silently skips a
scope type it cannot parse, so a stored rule would widen to unrestricted rather
than fail. Its section 3 is left commented out on purpose — the rows where it
was the only rule need a per-deployment decision, and neither answer should be
made silently. Numbered V40 rather than V35 because this feature's framework
migrations were delivered through the app: hcm's init_mysql already carries
softa-V35 … softa-V39, and reusing V35 would make "run V35" name